== master

* Fix #save/save! running transitions in ActiveRecord integrations even when a machine's action is not :save

== 0.7.4 / 2009-05-23

* Fix #save! not firing event attributes properly in ActiveRecord integrations
* Fix log files being included in gems

== 0.7.3 / 2009-04-25

* Require DataMapper version be >= 0.9.4
* Explicitly load Sequel's built-in inflector (>= 2.12.0) for scope names
* Don't use qualified name for event attributes
* Fix #valid? being defined for DataMapper resources when dm-validations isn't loaded
* Add auto-validation of values allowed for the state attribute in ORM integrations

== 0.7.2 / 2009-04-08

* Add support for running multiple methods in a callback without using blocks
* Add more flexibility around how callbacks are defined
* Add security documentation around mass-assignment in ORM integrations
* Fix event attribute transitions being publicly accessible

== 0.7.1 / 2009-04-05

* Fix machines failing to generate graphs when run from Merb tasks

== 0.7.0 / 2009-04-04

* Add #{attribute}_event for automatically firing events when the object's action is called
* Make it easier to override state-driven behaviors
* Rollback state changes when the action fails during transitions
* Use :messages instead of :invalid_message for customizing validation errors
* Use more human-readable validation errors
* Add support for more ActiveRecord observer hooks
* Add support for targeting multiple specific state machines in DataMapper observer hooks
* Don't pass the result of the action as an argument to callbacks (access via Transition#result)
* Fix incorrect results being used when running transitions in parallel
* Fix transition args not being set when run in parallel
* Allow callback terminators to be set on an application-wide basis
* Only catch :halt during before / after transition callbacks
* Fix ActiveRecord predicates being overwritten if they're already defined in the class