@@ -331,7 +331,7 @@ module StateMachine
             if super(:create_or_update)
               @instance_helper_module.class_eval do
                 define_method(:valid?) do |*args|
-                  self.class.state_machines.fire_attribute_events(self, :save, false) { super(*args) }
+                  self.class.state_machines.fire_event_attributes(self, :save, false) { super(*args) }
                 end
               end
             end
