@@ -44,12 +44,12 @@ module StateMachine
       end
     end
     
-    # Runs one or more attribute events in parallel during the invocation of
+    # Runs one or more event attributes in parallel during the invocation of
     # an action on the given object.  After transition callbacks can be
     # optionally disabled if the events are being only partially fired (for
     # example, when validating records in ORM integrations).
     # 
-    # The attribute events that will be fired are based on which machines
+    # The event attributes that will be fired are based on which machines
     # match the action that is being invoked.
     # 
     # == Examples
@@ -77,7 +77,7 @@ module StateMachine
     #   vehicle.state_event = 'ignite'
     #   vehicle.alarm_state_event = 'disable'
     #   
-    #   Vehicle.state_machines.fire_attribute_events(vehicle, :save) { true }
+    #   Vehicle.state_machines.fire_event_attributes(vehicle, :save) { true }
     #   vehicle.state                                 # => "idling"
     #   vehicle.state_event                           # => nil
     #   vehicle.alarm_state                           # => "off"
@@ -89,7 +89,7 @@ module StateMachine
     #   vehicle.state_event = 'park'
     #   vehicle.alarm_state_event = 'disable'
     #   
-    #   Vehicle.state_machines.fire_attribute_events(vehicle, :save) { true }
+    #   Vehicle.state_machines.fire_event_attributes(vehicle, :save) { true }
     #   vehicle.state                                 # => "parked"
     #   vehicle.state_event                           # => nil
     #   vehicle.alarm_state                           # => "active"
@@ -101,14 +101,17 @@ module StateMachine
     #   vehicle = Vehicle.create                      # => #<Vehicle id=1 state="parked" alarm_state="active">
     #   vehicle.state_event = 'ignite'
     #   
-    #   Vehicle.state_machines.fire_attribute_events(vehicle, :save, false) { true }
+    #   Vehicle.state_machines.fire_event_attributes(vehicle, :save, false) { true }
     #   vehicle.state                                 # => "idling"
     #   vehicle.state_event                           # => "ignite"
     #   vehicle.state_event_transition                # => #<StateMachine::Transition attribute=:state event=:ignite from="parked" from_name=:parked to="idling" to_name=:idling>
-    def fire_attribute_events(object, action, complete = true)
+    def fire_event_attributes(object, action, complete = true)
       # Get the transitions to fire for each applicable machine
       transitions = map {|attribute, machine| machine.action == action ? machine.events.attribute_transition_for(object, true) : nil}.compact
       return yield if transitions.empty?
+      
+      # The value generated by the yielded block (the actual action)
+      action_value = nil
       
       # Make sure all events were valid
       if result = transitions.all? {|transition| transition != false}
@@ -116,7 +119,7 @@ module StateMachine
           result = Transition.perform(transitions, :after => complete) do
             # Prevent events from being evaluated multiple times if actions are nested
             transitions.each {|transition| object.send("#{transition.attribute}_event=", nil)}
-            yield
+            action_value = yield
           end
         rescue Exception
           # Revert attribute modifications
@@ -139,7 +142,7 @@ module StateMachine
         end
       end
       
-      result
+      action_value.nil? ? result : action_value
     end
   end
 end
